@@ -3,6 +3,8 @@
 
 package org.meteor.remote.proto.client;
 
+import java.io.Serial;
+
 /**
  * Protobuf type {@code meteor.protobuf.TopicChangedSignal}
  */
@@ -10,7 +12,8 @@ public final class TopicChangedSignal extends
     com.google.protobuf.GeneratedMessageV3 implements
     // @@protoc_insertion_point(message_implements:meteor.protobuf.TopicChangedSignal)
     TopicChangedSignalOrBuilder {
-private static final long serialVersionUID = 0L;
+  @Serial
+  private static final long serialVersionUID = 0L;
   // Use TopicChangedSignal.newBuilder() to construct.
   private TopicChangedSignal(com.google.protobuf.GeneratedMessageV3.Builder<?> builder) {
     super(builder);
@@ -136,7 +139,7 @@ private static final long serialVersionUID = 0L;
     }
     public static final com.google.protobuf.Descriptors.EnumDescriptor
         getDescriptor() {
-      return org.meteor.remote.proto.client.TopicChangedSignal.getDescriptor().getEnumTypes().get(0);
+      return org.meteor.remote.proto.client.TopicChangedSignal.getDescriptor().getEnumTypes().getFirst();
     }
 
     private static final Type[] VALUES = values();
@@ -190,8 +193,8 @@ private static final long serialVersionUID = 0L;
   @java.lang.Override
   public java.lang.String getTopic() {
     java.lang.Object ref = topic_;
-    if (ref instanceof java.lang.String) {
-      return (java.lang.String) ref;
+    if (ref instanceof java.lang.String string) {
+      return string;
     } else {
       com.google.protobuf.ByteString bs = 
           (com.google.protobuf.ByteString) ref;
@@ -208,10 +211,10 @@ private static final long serialVersionUID = 0L;
   public com.google.protobuf.ByteString
       getTopicBytes() {
     java.lang.Object ref = topic_;
-    if (ref instanceof java.lang.String) {
+    if (ref instanceof java.lang.String string) {
       com.google.protobuf.ByteString b = 
           com.google.protobuf.ByteString.copyFromUtf8(
-              (java.lang.String) ref);
+                  string);
       topic_ = b;
       return b;
     } else {
@@ -536,8 +539,8 @@ private static final long serialVersionUID = 0L;
     }
     @java.lang.Override
     public Builder mergeFrom(com.google.protobuf.Message other) {
-      if (other instanceof org.meteor.remote.proto.client.TopicChangedSignal) {
-        return mergeFrom((org.meteor.remote.proto.client.TopicChangedSignal)other);
+      if (other instanceof org.meteor.remote.proto.client.TopicChangedSignal signal) {
+        return mergeFrom(signal);
       } else {
         super.mergeFrom(other);
         return this;
@@ -699,10 +702,10 @@ private static final long serialVersionUID = 0L;
     public com.google.protobuf.ByteString
         getTopicBytes() {
       java.lang.Object ref = topic_;
-      if (ref instanceof String) {
+      if (ref instanceof String string) {
         com.google.protobuf.ByteString b = 
             com.google.protobuf.ByteString.copyFromUtf8(
-                (java.lang.String) ref);
+                    string);
         topic_ = b;
         return b;
       } else {
